--- a/第04章 朴素贝叶斯/4.NaiveBayes.ipynb
+++ b/第04章 朴素贝叶斯/4.NaiveBayes.ipynb
@@ -371,7 +371,7 @@
    "metadata": {},
    "source": [
     "**解答：**  \n",
-    "首先将$P(Y=c_k)$概率定义为$p$，也就是说$c_k$发生的概率为$p$，那么对一个事件：在连续$N$个的序列里出现$m$次$y_i$=$c_k$的概率为$\\binom{N}{m}p^m(1-p)^{(N-m)}$"
+    "首先将$P(Y=c_k)$概率定义为$p$，也就是说$c_k$发生的概率为$p$，那么对一个事件：在连续$N$个的序列里出现$m$次$y_i$=$c_k$的概率为$\\binom{N}{m}p^m(1-p)^{(N-m)}$",
     "**第1步：**证明公式(4.8)：$\\displaystyle P(Y=c_k) = \\frac{\\displaystyle \\sum_{i=1}^N I(y_i=c_k)}{N}$  \n",
     "由于朴素贝叶斯法假设$Y$是定义在输出空间$\\mathcal{Y}$上的随机变量，因此可以定义$P(Y=c_k)$概率为$p$。  \n",
     "令$\\displaystyle m=\\sum_{i=1}^NI(y_i=c_k)$，得出似然函数：$$L(p)=f_D(y_1,y_2,\\cdots,y_n|\\theta)=\\binom{N}{m}p^m(1-p)^{(N-m)}$$使用微分求极值，两边同时对$p$求微分：$$\\begin{aligned}\n",
